Revision history for Petal.

0.5
	- Added tests
	- Modifiers are now 'modifier:' rather than ':modifier'
	- Modifiers are now stackable (i.e. foo:bar:baz/buz)
        - Implemented TALES '/' (alias for '.')
	- Rewrote Petal::Parser::HTMLWrapper using newest HTML::TreeBuilder
	- Fixed more include bugs
	- Amended documentation

0.4 Thu Jul 25 12:08:03 2002
	- Added Petal::Hash::Encode_HTML contributed mod
	- Fixed documentation bugs
	- Fixed multiple includes bug
	- Fixed Petal::Parser::HTMLWrapper includes
	- Added tests
	- Added warning for Petal statements with missing '?'

0.3 Fri Jul 19 11:20:30 2002
	- Fixed critical include bug
	- Added version number to cached file names
	- Added more tests
	- Updated documentation
	- Fixed wrong MANIFEST file
	- Updated README file

0.2 Tue Jul 16 11:54:55 2002
	- Fixed critical bug in Petal::Canonicalizer
	- Fixed documentation bug
	- Added first test in /t

0.1 Mon Jul 15 11:29:22 2002
	- Initial release