@@ -5,18 +5,35 @@ lib/Petal/Cache/Disk.pm
 lib/Petal/Canonicalizer.pm
 lib/Petal/CodeGenerator.pm
 lib/Petal/Hash.pm
+lib/Petal/Hash/String.pm
+lib/Petal/Hash/Encode_HTML.pm
 lib/Petal/Hash/Encode_XML.pm
 lib/Petal/Hash/FALSE.pm
 lib/Petal/Hash/SET.pm
 lib/Petal/Hash/TRUE.pm
+lib/Petal/Hash/UpperCase.pm
 lib/Petal/Hash/VAR.pm
 lib/Petal/Parser/HTMLWrapper.pm
 lib/Petal/Parser/XMLWrapper.pm
 lib/Petal.pm
 t/data/include/included.xml
 t/data/include/index.xml
+t/data/if.html
+t/data/if.xml
+t/data/multiple_includes/includes/footer.tmpl
+t/data/multiple_includes/includes/header.tmpl
+t/data/multiple_includes/register_form.tmpl
+t/data/multiple_includes/test.tmpl
+t/data/nested_modifiers/test1.xml
+t/data/nested_modifiers/test2.xml
 t/data/set_modifier/index.xml
-t/set_modifier.t
-t/include.t
+t/data/string.xml
+t/001_Include.t
+t/002_Set_Modifier.t
+t/003_More_Include.t
+t/004_Misc_Tests.t
+t/005_If_Nested_Tag.t
+t/006_Nested_Mods.t
+t/007_String_Modifier.t
 Makefile.PL
 README
